// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event::registerDefaultListener register by default 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "closed",
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Event::registerDefaultListener register by default 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "blurred",
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Event::registerDefaultListener register by default 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {},
        "type": "REDUX_OPENFIN_RES::APP_EVENT::CLOSED",
      },
    ],
    Array [
      Object {
        "error": undefined,
        "payload": Object {},
        "type": "REDUX_OPENFIN_RES::WIND_EVENT::BLURRED",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
